# langchain-parallel-web

./: Makefile  README.md  pyproject.toml
langchain_parallel_web/: __init__.py  parallel_web_wrapper.py  toolkits.py  tools.py
libs/langchain-parallel-web/: .env.example  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.cjs.json
libs/langchain-parallel-web/src/: tools.ts
libs/langchain-parallel-web/src/tests/: tools.unit.test.ts
tests/integration_tests/: test_toolkits.py  test_tools.py
tests/unit_tests/: test_parallel_web_wrapper.py
