[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-parallel-web"
version = "0.0.1a0"
description = "ParallelWeb integration for LangChain"
authors = ["Sanjeev Halyal <1448731+sanjeevhalyal@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sanjeevhalyal/langchain-parallel-web"
homepage = "https://github.com/sanjeevhalyal/langchain-parallel-web"
keywords = ["langchain", "parallel", "web", "llm", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Typing :: Typed",
]


[tool.poetry.urls]
"Source Code" = "https://github.com/sanjeevhalyal/langchain-parallel-web"
"Issues" = "https://github.com/sanjeevhalyal/langchain-parallel-web/issues"
"Release Notes" = "https://github.com/sanjeevhalyal/langchain-parallel-web/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3.15"
parallel-web = "^0.1.3"
pydantic = "^2.11.7"
aiohttp = "^3.12.15"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"